# sour

./: .earthignore  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  Dockerfile  Earthfile  LICENSE  README.md  dev.yaml  entrypoint  go.mod  go.sum  serve  test.conf  watch
.github/: goreleaser-for-darwin.yaml  goreleaser-for-linux.yaml  goreleaser-release.yaml
.github/workflows/: ci.yml
assets/: .gitignore  .ignore  archive  base.py  build-base  ci  dump-source.py  package.py  requirements.txt  setup  split-base.py  split-quad.py
client/: .prettierignore  build  package.json  tsconfig.json
client/definitions/: global.d.ts
client/scripts/: serve
client/src/: FileDropper.tsx  Loading.tsx  MobileControls.tsx  config.ts  discord.ts  index.html  index.tsx  logging.ts  names.ts  types.ts  unsafe-startup.d.ts  unsafe-startup.js  utils.ts
config/: .gitignore  build  config.yaml  default-config.yaml  schema.cue
cube2/: copy  mini-worker.js  mini.html
examples/: docker-compose.yml
game/: arbitrary_ws.patch  resolve_wasm.patch
gitpod/: Dockerfile
mapstuff/: .gitignore  academy.texlist  common.texlist  complex.texlist  douze.texlist  metl2.texlist  ot.texlist  turbine.texlist
proxy/: .gitignore  websocket.c
services/: docker-compose.yml
services/server/: .gitignore  .travis.yml  CMakeLists.txt  Makefile  build  readme.md
services/server/GeoIP/: CMakeLists.txt  Makefile
services/server/GeoIP/libGeoIP/geoiposx/: geoiposx.cbp  geoiposx_build_log.html
services/server/config/: server-init.cfg
services/server/enet/: Makefile
services/server/enet/enetosx/: enetosx.layout
services/server/engine/: command.cpp  cube.h  engine.h  master.cpp  server.cpp
services/server/fpsgame/: ai.cpp  ai.h  collect.h  ctf.h  fpsgame.h  game.h  server.cpp
services/server/genauthkey/: Makefile
services/server/ircbot/: ircbot.cpp  ircbot.h
services/server/mod/: QCom.cpp  QCom.h  QServ.cpp  QServ.h
services/server/shared/: geom.h  iengine.h  igame.h  tools.h
services/server/socket/: socket.cpp  socket.h
services/server/vcpp/: sauerbraten.cbp  sauerbraten.sln  sauerbraten.vcxproj
(+1035 files in other folders)
